--- a/es/package.json
+++ b/es/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^4.2.5",
     "@types/redux-logger": "^3.0.5",
     "lodash": "^4.17.5",
+    "material-ui-next": "^1.0.0-beta.38",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -24,7 +25,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-observable": "^0.18.0",
-    "rxjs": "^5.5.7"
+    "rxjs": "^5.5.7",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^4.0.1",
