--- a/es/package.json
+++ b/es/package.json
@@ -16,10 +16,12 @@
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.5",
     "@types/redux-logger": "^3.0.5",
+    "final-form": "^4.4.0",
     "lodash": "^4.17.5",
     "material-ui-next": "^1.0.0-beta.38",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-final-form": "^3.1.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
