--- a/es/package.json
+++ b/es/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^4.0.1",
+    "lodash-checkit": "^2.1.0",
     "source-map-loader": "^0.2.3",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2"
