--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,3 +2,4 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
 play.filters.headers.allowActionSpecificHeaders=true
+play.filters.disabled += play.filters.csrf.CSRFFilter
