--- a/es/package.json
+++ b/es/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^4.0.1",
-    "lodash-checkit": "^2.1.0",
     "source-map-loader": "^0.2.3",
     "ts-loader": "^4.1.0",
-    "typescript": "^2.7.2"
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1"
   }
 }
