--- a/es/package.json
+++ b/es/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^4.0.1",
+    "css-loader": "^0.28.11",
     "source-map-loader": "^0.2.3",
     "ts-loader": "^4.1.0",
     "tslint": "^5.9.1",
